--- a/01-HTML-CSS/09-animations/Andrew, Ohad, Yahia/exchange.html
+++ b/01-HTML-CSS/09-animations/Andrew, Ohad, Yahia/exchange.html
@@ -38,7 +38,7 @@
                     <h4 id="root"></h4>
                     <button onclick="decrement()">-</button>
                     <button onclick="increment()">+</button>
-                    <p>PRICE     <span class="color="red>~</span>       €6.022</p>
+                    <p>PRICE=>€6.022</p>
                 </div>   
                
 
@@ -62,23 +62,28 @@
                              <p>PRICE     <span class="color=red">~</span>       €6.022</p>
                          </div>
                 </div> 
-
    </div>
+<!--////////////////////////////////////////////////////////////////////////////////////-->
+
 <hr style="width:500px; float: left;">
 <div class="button-change">
   <button style="color:orange;">⇅</button>  
 </div>
 <hr style="width:500px; float: left; margin-top: 30px;">
-<!--////////////////////////////////////////////////////////////////////////////////////-->
+<hr style="width:500px; float: left; position: absolute; margin-top: 300px;">
+
    <div class="your-Exchange__result">
        <div class="box text">EXCHANG FOR</div>
        <div class="box theresult"><input type="reset" value="1.497,68"></div>
        <div class="box text">LINK</div>
    </div>
-
-
+   
 <!--////////////////////////////////////////////////////////////////////////////////////-->
-<div class="footer">
+
+    
+   
+    </div><!--////////////////////////////////////////////////////////////////////////////////////-->
+<div class="footer2">
     <div class="footer-container">
         <div class="footer-container__market">
 
