--- a/01-HTML-CSS/09-animations/tamir/chaim/index.html
+++ b/01-HTML-CSS/09-animations/tamir/chaim/index.html
@@ -13,19 +13,26 @@
 </head>
 
 <body>
-<<<<<<< Updated upstream
+
     <div class="wrapper">
-        <img src="" alt="">
-        <h1 class="wrapper__h">Audi Q7</h1>
-        <h4 class="wrapper__h4"> 4.2</h4>
-        <h3 class="wrapper__h3">35,800$ <span class="b"><i class='fa fa-fire' style='font-size:25px'></i>best
-                price></span>
-            <p class="fa fa-arrow-circle-left" style="font-size:36px"></p>
-            <p class='fa fa-star' style='font-size:25px'></p>
+        <img src="https://th.bing.com/th/id/OIF.IGGa9H8t9Pa1ueBGD8G76A?pid=ImgDet&rs=1" alt="">
+        <div class='wrapper__info'>
+            <h1 class="wrapper__h">Audi Q7(4s)</h1>
+            <h4 class="wrapper__h4">
+                <p class='fa fa-star'></p>4.2
+            </h4>
+        </div>
+        <div class='wrapper__subinfo'>
+            <h3 class="wrapper__h3">35,800$</h3>
+            <span class="b"><i class='fa fa-fire'></i>best
+                price</span>
+
+        </div>
     </div>
     <div class=wrapper2>
         <div class="container1">
             <ol>
+                <p class="fa fa-arrow-circle-left"></p>
                 <ul>Specifications</ul>
                 <ul>body: audi k7</ul>
                 <ul>made in: Spain Engine volume: 999</ul>
@@ -76,7 +83,7 @@
             <i class='fa fa-map-marker' style='font-size:40px ;color:red'></i>
         </div>
     </div>
-=======
+
 
 
     <div class="box1">
@@ -143,7 +150,7 @@
                     <i class='fa fa-map-marker' style='font-size:40px ;color:red'></i>
                 </div>
             </div>
->>>>>>> Stashed changes
+            >>>>>>> Stashed changes
 </body>
 
 </html>
