--- a/01-HTML-CSS/09-animations/tamir/chaim/index.html
+++ b/01-HTML-CSS/09-animations/tamir/chaim/index.html
@@ -13,7 +13,6 @@
 </head>
 
 <body>
-<<<<<<< Updated upstream
     <div class="wrapper">
         <img src="" alt="">
         <h1 class="wrapper__h">Audi Q7</h1>
@@ -23,14 +22,14 @@
             <p class="fa fa-arrow-circle-left" style="font-size:36px"></p>
             <p class='fa fa-star' style='font-size:25px'></p>
     </div>
-    <div class=wrapper2>
+    <div class= wrapper2>
         <div class="container1">
             <ol>
-                <ul>Specifications</ul>
-                <ul>body: audi k7</ul>
-                <ul>made in: Spain Engine volume: 999</ul>
-                <ul>Horsepower: 116 Motion: 4X2</ul>
-                <ul>Chassis: The Chevak . Fuel Type: Gasoline</ul>
+                <ul>Specifications
+                <ul>body: audi k7
+                <ul>made in: Spain Engine volume: 999
+                <ul>Horsepower: 116 Motion: 4X2
+                <ul>Chassis: The Chevak . Fuel Type: Gasoline
                 <ul>Total weight: 1680 kg Number of seats: 5</ul>
             </ol>
         </div>
