Revert "Add responsive"
This reverts commit 7511e00744bd4f8cef550fdf5633bfd8d0612c0d.

--- a/01-HTML-CSS/08-Responsive/Lior_project/FINAL/Lior_Project.html
+++ b/01-HTML-CSS/08-Responsive/Lior_project/FINAL/Lior_Project.html
@@ -7,7 +7,6 @@
     <title>Document</title>
     <link rel="stylesheet" href="dist\Lior_Project.css">
     <link href="https://fonts.googleapis.com/css2?family=Odibee+Sans&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/76fdd0e120.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/d4474f137c.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -59,7 +58,7 @@
 
            <!--911  start----------------------------------------------------------------------------->
             <li class="dropDown">
-                <li class="CarName"><a href="#">911</a>
+                <li><a href="#">911</a>
                     <ul class="menu-area">
                         <ul>
                             <h4></h4>
@@ -92,7 +91,7 @@
 
             <!--Taycan  start----------------------------------------------------------------------------->
             <li class="dropDown">
-                <li class="CarName"><a href="#">Taycan</a>
+                <li><a href="#">Taycan</a>
                     <ul class="menu-area">
                         <ul>
                             <h4></h4>
@@ -122,7 +121,7 @@
 
             <!--Panamera  start----------------------------------------------------------------------------->
             <li class="dropDown">
-                <li class="CarName"><a href="#">Panamera</a>
+                <li><a href="#">Panamera</a>
                     <ul class="menu-area">
                         <ul>
                             <h4></h4>
@@ -152,63 +151,59 @@
 
             <!--Macan  start----------------------------------------------------------------------------->
             <li class="dropDown">
-                <li class="CarName">
-                    <a href="#">Macan</a>
-                    <ul class="menu-area">
-                        <ul>
-                            <h4></h4>
-                            <img src="https://nav.porsche.com/00BC524/frontshot-assets/1920/macan.jpg" alt="">
-                        </ul>
-                        <ul>
-                            <h4></h4>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                        </ul>
-                        <ul>
-                            <h4></h4>
-                            <li class="second_column"><a href="#"> <i class="fas fa-cog"></i> Configure</a></li>
-                            <li class="second_column"><a href="#"><i class="fas fa-compress-alt"></i> Compare</a></li>
-                            <li class="second_column"><a href="#"><i class="fas fa-search"></i> Find New and Pre-Owned vehicle</a></li>
-                        </ul>
-                        <ul>
-                            <h4></h4>
-                                <li class="third_column"><left><a href="#"><i class="fas fa-chevron-right"></i>   Macan Models</a></li>                  
-                            </ul>
+                <a href="#">Macan</a>
+                <ul class="menu-area">
+                    <ul>
+                        <h4></h4>
+                        <img src="https://nav.porsche.com/00BC524/frontshot-assets/1920/macan.jpg" alt="">
                     </ul>
-                </li>
+                    <ul>
+                        <h4></h4>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                    </ul>
+                    <ul>
+                        <h4></h4>
+                        <li class="second_column"><a href="#"> <i class="fas fa-cog"></i> Configure</a></li>
+                        <li class="second_column"><a href="#"><i class="fas fa-compress-alt"></i> Compare</a></li>
+                        <li class="second_column"><a href="#"><i class="fas fa-search"></i> Find New and Pre-Owned vehicle</a></li>
+                    </ul>
+                    <ul>
+                        <h4></h4>
+                            <li class="third_column"><left><a href="#"><i class="fas fa-chevron-right"></i>   Macan Models</a></li>                  
+                        </ul>
+                </ul>
             </li>
             <!--Macan  end----------------------------------------------------------------------------->
 
             <!--Cayenne  start----------------------------------------------------------------------------->
             <li class="dropDown">
-                <li class="CarName">
-                    <a href="#">Cayenne</a>
-                        <ul class="menu-area">
-                            <ul>
-                                <h4></h4>
-                                <img src="https://nav.porsche.com/00BC524/frontshot-assets/1920/cayenne.jpg" alt="">
-                            </ul>
-                            <ul>
-                                <h4></h4>
-                                <li><a href="#"></a></li>
-                                <li><a href="#"></a></li>
-                                <li><a href="#"></a></li>
-                                <li><a href="#"></a></li>
-                            </ul>
-                            <ul>
-                                <h4></h4>
-                                <li class="second_column"><a href="#"> <i class="fas fa-cog"></i> Configure</a></li>
-                                <li class="second_column"><a href="#"><i class="fas fa-compress-alt"></i> Compare</a></li>
-                                <li class="second_column"><a href="#"><i class="fas fa-search"></i> Find New and Pre-Owned vehicle</a></li>
-                            </ul>
-                            <ul>
-                                <h4></h4>
-                                <li class="third_column"><left><a href="#"><i class="fas fa-chevron-right"></i>   Cayenne Models</a></li>
-                            </ul>
-                        </ul>
-                </li>
+                <a href="#">Cayenne</a>
+                <ul class="menu-area">
+                    <ul>
+                        <h4></h4>
+                        <img src="https://nav.porsche.com/00BC524/frontshot-assets/1920/cayenne.jpg" alt="">
+                    </ul>
+                    <ul>
+                        <h4></h4>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                    </ul>
+                    <ul>
+                        <h4></h4>
+                        <li class="second_column"><a href="#"> <i class="fas fa-cog"></i> Configure</a></li>
+                        <li class="second_column"><a href="#"><i class="fas fa-compress-alt"></i> Compare</a></li>
+                        <li class="second_column"><a href="#"><i class="fas fa-search"></i> Find New and Pre-Owned vehicle</a></li>
+                    </ul>
+                    <ul>
+                        <h4></h4>
+                        <li class="third_column"><left><a href="#"><i class="fas fa-chevron-right"></i>   Cayenne Models</a></li>
+                    </ul>
+                </ul>
             </li>
             <!--Cayenne  end----------------------------------------------------------------------------->                            
         </ul>
@@ -262,28 +257,5 @@
 <!--Carousel end--------------------------------------------------------------------->
 
 <!--Lior's Part  end------------------------------------------------------------------------------->
-
-
-
-<!--Michael's Part  start-------------------------------------------------------------------------------
-
-<div class="live__main">
-
-    <div class="header">Porsche Live</div>
-    <div class="live_main_box--boxBig boxBig1"><div class="box-hide"><i class="fab fa-2x fa-instagram"></i><span>Learn More</span></div></div>
-    <div class="live_main_box box1"><h3>Porsche<br><span>Gearing-Up</span></h3><i class="fab fa-2x fa-instagram"></i></div>
-    <div class="live_main_box box2"><h3>Porsche<br><span>Gearing-Up</span></h3><i class="fab fa-2x fa-instagram"></i></div>
-    <div class="live_main_box--boxBig boxBig2"><div class="box-hide"><i class="fab fa-2x fa-instagram"></i><span>Learn More</span></div></div>
-    <div class="live_main_box--boxBig boxBig3"><div class="box-hide"><i class="fab fa-2x fa-instagram"></i><span>Learn More</span></div></div>
-    <div class="live_main_box box3"><h3>Porsche<br><span>Gearing-Up</span></h3><i class="fab fa-2x fa-instagram"></i></div>
-    <div class="live_main_box box4"><h3>Porsche<br><span>Gearing-Up</span></h3><i class="fab fa-2x fa-instagram"></i></div>
-    <div class="live_main_box box5"><h3>Porsche<br><span>Gearing-Up</span></h3><i class="fab fa-2x fa-instagram"></i></div>
-    <div class="live_main_box box6"><h3>Porsche<br><span>Gearing-Up</span></h3><i class="fab fa-2x fa-instagram"></i></div>
-
-    <div class="footer"><span>></span>Load More</div>
-
-</div>
-
--Michael's Part  end------------------------------------------------------------------------------->
 </body>
 </html>
