--- a/01-HTML-CSS/08-Responsive/Lior_project/FINAL/Lior_Project.html
+++ b/01-HTML-CSS/08-Responsive/Lior_project/FINAL/Lior_Project.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="dist\Lior_Project.css">
     <link href="https://fonts.googleapis.com/css2?family=Odibee+Sans&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/76fdd0e120.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/d4474f137c.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -257,5 +258,26 @@
 <!--Carousel end--------------------------------------------------------------------->
 
 <!--Lior's Part  end------------------------------------------------------------------------------->
+
+
+<!--Michael's Part  start------------------------------------------------------------------------------->
+<div class="live__main">
+
+    <div class="header">Porsche Live</div>
+    <div class="live_main_box--boxBig boxBig1"><div class="box-hide"><i class="fab fa-2x fa-instagram"></i><span>Learn More</span></div></div>
+    <div class="live_main_box box1"><h3>Porsche<br><span>Gearing-Up</span></h3><i class="fab fa-2x fa-instagram"></i></div>
+    <div class="live_main_box box2"><h3>Porsche<br><span>Gearing-Up</span></h3><i class="fab fa-2x fa-instagram"></i></div>
+    <div class="live_main_box--boxBig boxBig2"><div class="box-hide"><i class="fab fa-2x fa-instagram"></i><span>Learn More</span></div></div>
+    <div class="live_main_box--boxBig boxBig3"><div class="box-hide"><i class="fab fa-2x fa-instagram"></i><span>Learn More</span></div></div>
+    <div class="live_main_box box3"><h3>Porsche<br><span>Gearing-Up</span></h3><i class="fab fa-2x fa-instagram"></i></div>
+    <div class="live_main_box box4"><h3>Porsche<br><span>Gearing-Up</span></h3><i class="fab fa-2x fa-instagram"></i></div>
+    <div class="live_main_box box5"><h3>Porsche<br><span>Gearing-Up</span></h3><i class="fab fa-2x fa-instagram"></i></div>
+    <div class="live_main_box box6"><h3>Porsche<br><span>Gearing-Up</span></h3><i class="fab fa-2x fa-instagram"></i></div>
+
+    <div class="footer"><span>></span>Load More</div>
+
+</div>
+<!--Michael's Part  end------------------------------------------------------------------------------->
+
 </body>
 </html>
