--- a/01-HTML-CSS/08-Responsive/Lior_project/FINAL/Lior_Project.html
+++ b/01-HTML-CSS/08-Responsive/Lior_project/FINAL/Lior_Project.html
@@ -261,22 +261,27 @@
 
 
 <!--Michael's Part  start------------------------------------------------------------------------------->
-<div class="live__main">
 
-    <div class="header">Porsche Live</div>
-    <div class="live_main_box--boxBig boxBig1"><div class="box-hide"><i class="fab fa-2x fa-instagram"></i><span>Learn More</span></div></div>
-    <div class="live_main_box box1"><h3>Porsche<br><span>Gearing-Up</span></h3><i class="fab fa-2x fa-instagram"></i></div>
-    <div class="live_main_box box2"><h3>Porsche<br><span>Gearing-Up</span></h3><i class="fab fa-2x fa-instagram"></i></div>
-    <div class="live_main_box--boxBig boxBig2"><div class="box-hide"><i class="fab fa-2x fa-instagram"></i><span>Learn More</span></div></div>
-    <div class="live_main_box--boxBig boxBig3"><div class="box-hide"><i class="fab fa-2x fa-instagram"></i><span>Learn More</span></div></div>
-    <div class="live_main_box box3"><h3>Porsche<br><span>Gearing-Up</span></h3><i class="fab fa-2x fa-instagram"></i></div>
-    <div class="live_main_box box4"><h3>Porsche<br><span>Gearing-Up</span></h3><i class="fab fa-2x fa-instagram"></i></div>
-    <div class="live_main_box box5"><h3>Porsche<br><span>Gearing-Up</span></h3><i class="fab fa-2x fa-instagram"></i></div>
-    <div class="live_main_box box6"><h3>Porsche<br><span>Gearing-Up</span></h3><i class="fab fa-2x fa-instagram"></i></div>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/76fdd0e120.js" crossorigin="anonymous"></script>
 
-    <div class="footer"><span>></span>Load More</div>
 
-</div>
+    <div class="live__main">
+
+        <div class="header">Porsche Live</div>
+        <div class="live__main__box--boxBig boxBig1"><div class="box-hide"><i class="fab fa-2x fa-instagram"></i><span>Learn More</span></div></div>
+        <div class="live__main__box box1"><h3>Porsche<br><span>Gearing-Up</span></h3><i class="fab fa-2x fa-instagram"></i></div>
+        <div class="live__main__box box2"><h3>Porsche<br><span>Gearing-Up</span></h3><i class="fab fa-2x fa-instagram"></i></div>
+        <div class="live__main__box--boxBig boxBig2"><div class="box-hide"><i class="fab fa-2x fa-instagram"></i><span>Learn More</span></div></div>
+        <div class="live__main__box--boxBig boxBig3"><div class="box-hide"><i class="fab fa-2x fa-instagram"></i><span>Learn More</span></div></div>
+        <div class="live__main__box box3"><h3>Porsche<br><span>Gearing-Up</span></h3><i class="fab fa-2x fa-instagram"></i></div>
+        <div class="live__main__box box4"><h3>Porsche<br><span>Gearing-Up</span></h3><i class="fab fa-2x fa-instagram"></i></div>
+        <div class="live__main__box box5"><h3>Porsche<br><span>Gearing-Up</span></h3><i class="fab fa-2x fa-instagram"></i></div>
+        <div class="live__main__box box6"><h3>Porsche<br><span>Gearing-Up</span></h3><i class="fab fa-2x fa-instagram"></i></div>
+
+        <div class="footer"><span>></span>Load More</div>
+
+    </div>
 <!--Michael's Part  end------------------------------------------------------------------------------->
 
 </body>
