--- a/01-HTML-CSS/08-Responsive/Lior_project/FINAL/Lior_Project.html
+++ b/01-HTML-CSS/08-Responsive/Lior_project/FINAL/Lior_Project.html
@@ -286,5 +286,136 @@
     </div>
 <!--Michael's Part  end------------------------------------------------------------------------------->
 
+<!--Ido's Part  starts------------------------------------------------------------------------------->
+<div class="models">
+    <div class="models_carsMenu">
+        <div class="models_carsMenu-headLine">
+        <h1>Models</h1>
+    </div>
+    <div class="models_carsMenu-animationCar animationOne">
+        <span>718</span>
+        <ul>
+           <a href="">718 Cayman</a>
+            <a href="">718 Boxster</a>
+            <a href="">718 Boxster S</a>
+            <a href="">718 Spyder</a> 
+           <a href="">718 Cayman GT4</a>  
+        </ul>
+    </div>
+    <div class="models_carsMenu-animationCar animationTwo">
+        <span>911</span>
+        <ul>
+            <a href="">911 Carrera</a>
+            <a href="">911 Carrera 4</a>
+            <a href="">911 Carrera S</a>
+            <a href="">911 Targa 4</a> 
+           <a href="">911 Targa 4S</a> 
+           <a href="">911 Turbo</a> 
+           <a href="">911 GT3</a> 
+        </ul>
+    </div>
+    <div class="models_carsMenu-animationCar animationThree">
+        <span>Taycan</span>
+        <ul>
+            <a href="">Taycan 4S</a>
+            <a href="">Taycan GTS</a>
+            <a href="">Taycan Turbo</a>
+            <a href="">Taycan Turbo S</a>  
+        </ul>
+    </div>
+    <div class="models_carsMenu-animationCar animationFour">
+        <span>Panamera</span>
+        <ul>
+            <a href="">Panamera 4</a>
+            <a href="">Panamera 4S</a> 
+           <a href="">Panamera Turbo</a> 
+           <a href="">Panamera 4S Sport</a>    
+           <a href="">Panamera GTS</a> 
+        </ul>
+    </div>
+    <div class="models_carsMenu-animationCar animationFive">
+        <span>Mecan</span>
+        <ul>
+            <a href="">Mecan</a>
+            <a href="">Mecan S</a>
+            <a href="">Mecan GTS</a> 
+        </ul>
+    </div>
+    <div class="models_carsMenu-animationCar animationSix">
+        <span>Cayenne</span>
+        <ul>
+            <a href="">Cayenne Coupe</a>
+            <a href="">Cayenne E-Hybrid</a>
+            <a href="">Cayenne S</a> 
+           <a href="">Cayenne GTS</a> 
+           <a href="">Cayenne Turbo</a>   
+           <a href="">Cayenne Turbo GT</a>  
+        </ul>
+    </div>
+</div>
+
+
+<div class="models_container">
+    <div class="models_container_box box718">
+        <div class="models_container_box_headline"><span>718</span></div>
+        <div class="models_container_box_buttons">
+          <button class="models_container_box_buttons-buildYourOwn" type="buttom"><i class="fas fa-external-link-alt"></i>Build Your Own</button>
+          <button class="models_container_box_buttons-allModels" type="buttom"><i class="fas fa-angle-right"></i>All Models</button>
+          <button id="btnTypes" class="models_container_box_buttons-Name" type="buttom"><i class="fas fa-angle-right"></i>718</button>
+        </div>
+      
+        </div>
+
+    <div class="models_container_box box911">
+        <div class="models_container_box_headline"><span>911</span></div>
+        <div class="models_container_box_buttons">
+            <button class="models_container_box_buttons-buildYourOwn" type="buttom"><i class="fas fa-external-link-alt"></i>Build Your Own</button>
+            <button class="models_container_box_buttons-allModels" type="buttom"><i class="fas fa-angle-right"></i>All Models</button>
+            <button id="btnTypesTwo" class="models_container_box_buttons-Name" type="buttom"><i class="fas fa-angle-right"></i>911</button>
+          </div>
+    </div>
+
+    <div class="models_container_box boxTaycan">
+        <div class="models_container_box_headline"><span>Taycan</span></div>
+        <div class="models_container_box_buttons">
+            <button class="models_container_box_buttons-buildYourOwn" type="buttom"><i class="fas fa-external-link-alt"></i>Build Your Own</button>
+            <button class="models_container_box_buttons-allModels" type="buttom"><i class="fas fa-angle-right"></i>All Models</button>
+            <button class="models_container_box_buttons-Name" type="buttom"><i class="fas fa-angle-right"></i>Taycan</button>
+
+          </div>
+    </div>
+    <div class="models_container_box boxpanamera">
+        <div class="models_container_box_headline"><span>Panamera</span></div>
+        <div class="models_container_box_buttons">
+            <button class="models_container_box_buttons-buildYourOwn" type="buttom"><i class="fas fa-external-link-alt"></i>Build Your Own</button>
+            <button class="models_container_box_buttons-allModels" type="buttom"><i class="fas fa-angle-right"></i>All Models</button>
+            <button class="models_container_box_buttons-Name" type="buttom"><i class="fas fa-angle-right"></i>Panamera</button>
+          </div>
+    </div>
+
+    <div class="models_container_box boxmecan">
+        <div class="models_container_box_headline"><span>Mecan</span></div>
+        <div class="models_container_box_buttons">
+            <button class="models_container_box_buttons-buildYourOwn" type="buttom"><i class="fas fa-external-link-alt"></i>Build Your Own</button>
+            <button class="models_container_box_buttons-allModels" type="buttom"><i class="fas fa-angle-right"></i>All Models</button>
+            <button class="models_container_box_buttons-Name" type="buttom"><i class="fas fa-angle-right"></i>Mecan</button>
+
+          </div>
+    </div>
+    <div class="models_container_box boxcayenne">
+        <div class="models_container_box_headline"><span>Cayenne</span></div>
+        <div class="models_container_box_buttons">
+            <button class="models_container_box_buttons-buildYourOwn" type="buttom"><i class="fas fa-external-link-alt"></i>Build Your Own</button>
+            <button class="models_container_box_buttons-allModels" type="buttom"><i class="fas fa-angle-right"></i>All Models</button>
+            <button class="models_container_box_buttons-Name" type="buttom"><i class="fas fa-angle-right"></i>Cayenne</button>
+
+          </div>
+    </div>
+</div>
+</div>
+
+<!--Ido's Part  end------------------------------------------------------------------------------->
+
+
 </body>
 </html>
