--- a/01-HTML-CSS/08-Responsive/Lior_project/FINAL/Lior_Project.html
+++ b/01-HTML-CSS/08-Responsive/Lior_project/FINAL/Lior_Project.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="dist\Lior_Project.css">
     <link href="https://fonts.googleapis.com/css2?family=Odibee+Sans&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/76fdd0e120.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/d4474f137c.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Andika&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Imperial+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
+    <title>Porsch</title>
+     <link rel="shortcut icon" href="https://lezebre.lu/images/detailed/79/45326-Sticker-Porsche-Logo.png">
 </head>
 <body>
 <!--Lior's Part  start------------------------------------------------------------------------------->
