--- a/01-HTML-CSS/08-Responsive/Lior_project/FINAL/Models.html
+++ b/01-HTML-CSS/08-Responsive/Lior_project/FINAL/Models.html
@@ -12,6 +12,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap" rel="stylesheet">    
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/3ae94d6aa8.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="dist/models.css">
     <title>Porsch Models</title>
      <link rel="shortcut icon" href="https://lezebre.lu/images/detailed/79/45326-Sticker-Porsche-Logo.png">
