--- a/01-HTML-CSS/08-Responsive/Lior_project/FINAL/Lior_Project.html
+++ b/01-HTML-CSS/08-Responsive/Lior_project/FINAL/Lior_Project.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="dist\Lior_Project.css">
+    <link rel="stylesheet" href="dist\lior_project.css">
     <link href="https://fonts.googleapis.com/css2?family=Odibee+Sans&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/76fdd0e120.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/d4474f137c.js" crossorigin="anonymous"></script>
