--- a/01-HTML-CSS/09-animations/tamir/chaim/index.html
+++ b/01-HTML-CSS/09-animations/tamir/chaim/index.html
@@ -23,8 +23,7 @@
         </div>
         <div class='wrapper__subinfo'>
             <h3 class="wrapper__h3">35,800$</h3>
-            <span class="b"><i class='fa fa-fire'></i>best
-                price</span>
+            <span class="b"><i class='fa fa-fire'></i>best price</span>
 
         </div>
     </div>
@@ -40,25 +39,23 @@
             <p>Continuous use value 6944 </p>
         </div>
     </div>
-    <div class="container2">
-        <h5>mervine ckainer<br> honer</i>
-            <main class=img>
-                <img src="image (2).png" alt="">
-            </main>
-        </h5>
-        <h6 class="h6"> <p>50km away</p>
-            <i class='fa fa-map-marker' style='font-size:40px ;color:red'></i>
-        </h6>
+    <div class=wrapper3>
+        <div class="container2">
+            <h5>mervine ckainer<br> honer</i>
+                <main class=img>
+                    <img src="image (2).png" alt="">
+                </main>
+            </h5>
+            <h6 class="mark">
+                <i class='fa fa-map-marker' style='font-size:40px ;color:red'>50km away</i>
+            </h6>
+        </div>
+    </div>
+    <div class=wrapper5>
         <div class="container3">
             <h5>send message</h5>
-
         </div>
-
     </div>
-
-
-
-
 
 </body>
 
