--- a/01-HTML-CSS/09-animations/Andrew/final project/Wallet.html
+++ b/01-HTML-CSS/09-animations/Andrew/final project/Wallet.html
@@ -455,7 +455,7 @@
                         <p>OASIS</p>
                     </div>
                     <div class="wallet-portfolio__list__item__graph">
-                        <img src="https://gcdn.pbrd.co/images/VQXu5uhqiJAe.png?o=1">
+                        <img src="https://gcdn.pbrd.co/images/XeBfn1bTjc3k.png?o=1">
                     </div>
                     <div class="wallet-portfolio__list__item__price">
                         <p>12.500</p>
@@ -478,7 +478,7 @@
                         <p>AVALANCHE</p>
                     </div>
                     <div class="wallet-portfolio__list__item__graph">
-                        <img src="https://gcdn.pbrd.co/images/VQXu5uhqiJAe.png?o=1">
+                        <img src="https://gcdn.pbrd.co/images/89ckWH4gQxof.png?o=1">
                     </div>
                     <div class="wallet-portfolio__list__item__price">
                         <p>47,38662</p>
@@ -500,7 +500,7 @@
                         <p>CHAINLINK</p>
                     </div>
                     <div class="wallet-portfolio__list__item__graph">
-                        <img src="https://gcdn.pbrd.co/images/VQXu5uhqiJAe.png?o=1">
+                        <img src="https://gcdn.pbrd.co/images/PRAhsp8sNPY7.png?o=1">
                     </div>
                     <div class="wallet-portfolio__list__item__price">
                         <p>50,45872</p>
@@ -524,7 +524,7 @@
                         <p>BINANCE USD</p>
                     </div>
                     <div class="wallet-portfolio__list__item__graph">
-                        <img src="https://gcdn.pbrd.co/images/VQXu5uhqiJAe.png?o=1">
+                        <img src="https://gcdn.pbrd.co/images/0CfrYo8rWIWu.png?o=1">
                     </div>
                     <div class="wallet-portfolio__list__item__price">
                         <p>1.600</p>
@@ -548,7 +548,7 @@
                         <p>DOGECOIN</p>
                     </div>
                     <div class="wallet-portfolio__list__item__graph">
-                        <img src="https://gcdn.pbrd.co/images/VQXu5uhqiJAe.png?o=1">
+                        <img src="https://gcdn.pbrd.co/images/w4q3ykjwxLTD.png?o=1">
                     </div>
                     <div class="wallet-portfolio__list__item__price">
                         <p>92,45789</p>
@@ -574,15 +574,13 @@
                         <p>BITCOIN</p>
                     </div>
                     <div class="wallet-portfolio__list__item__graph">
-                        <img src="https://gcdn.pbrd.co/images/VQXu5uhqiJAe.png?o=1">
+                        <img src="https://gcdn.pbrd.co/images/e7zINGplg9Q8.png?o=1">
                     </div>
                     <div class="wallet-portfolio__list__item__price">
                         <p>15,23545</p>
                         <p class="--red">€ 0,786100</p>
                     </div>
                 </div>
-
-
 
                 <div class="wallet-portfolio__list__item">
                     <div class="wallet-portfolio__list__item__icon">
@@ -637,7 +635,7 @@
                         <p>UNISWAP</p>
                     </div>
                     <div class="wallet-portfolio__list__item__graph">
-                        <img src="https://gcdn.pbrd.co/images/VQXu5uhqiJAe.png?o=1">
+                        <img src="https://gcdn.pbrd.co/images/PRAhsp8sNPY7.png?o=1">
                     </div>
                     <div class="wallet-portfolio__list__item__price">
                         <p>7.600</p>
@@ -661,7 +659,7 @@
                         <p>KLAYTN</p>
                     </div>
                     <div class="wallet-portfolio__list__item__graph">
-                        <img src="https://gcdn.pbrd.co/images/VQXu5uhqiJAe.png?o=1">
+                        <img src="https://gcdn.pbrd.co/images/XeBfn1bTjc3k.png?o=1">
                     </div>
                     <div class="wallet-portfolio__list__item__price">
                         <p>19.300</p>
@@ -696,7 +694,7 @@
                         <p>AXIE INFINITY</p>
                     </div>
                     <div class="wallet-portfolio__list__item__graph">
-                        <img src="https://gcdn.pbrd.co/images/VQXu5uhqiJAe.png?o=1">
+                        <img src="https://gcdn.pbrd.co/images/e7zINGplg9Q8.png?o=1">
                     </div>
                     <div class="wallet-portfolio__list__item__price">
                         <p>69,42000</p>
@@ -718,7 +716,7 @@
                         <p>STELLAR</p>
                     </div>
                     <div class="wallet-portfolio__list__item__graph">
-                        <img src="https://gcdn.pbrd.co/images/VQXu5uhqiJAe.png?o=1">
+                        <img src="https://gcdn.pbrd.co/images/PRAhsp8sNPY7.png?o=1">
                     </div>
                     <div class="wallet-portfolio__list__item__price">
                         <p>9.760</p>
