OR LAST PROJECT

--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/home-Or.html
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/home-Or.html
@@ -17,7 +17,7 @@
             <div id="control__nav">
                 <nav>
                     <ul>
-                        <li id="home"><a href="home.html"><i class="material-icons white-color">home</i></a></li>
+                        <li id="home"><a href="home-Or.html"><i class="material-icons white-color">home</i></a></li>
                         <li id="chart"><a href="noa1.html"><i class="material-icons white-color">email</i></a></li>
                         <li id="info"><a href="info.html"><i class="material-icons white-color">pie_chart</i></a></li>
                         <li id="monthly-tasks"><a href="monthly-tasks.html"><i
