--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/noa1.html
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/noa1.html
@@ -18,7 +18,7 @@
             <div id="control__nav">
                 <nav>
                     <ul>
-                        <li><a href="home.html"><i class="material-icons white-color">home</i></a></li>
+                        <li><a href="home-Or.html"><i class="material-icons white-color">home</i></a></li>
                         <li><a href="info.html"><i class="material-icons white-color">email</i></a></li>
                         <li><a href="noa1.html"><i class="material-icons white-color">pie_chart</i></a></li>
                         <li id="monthly-tasks"><a href="monthly-tasks.html"><i
@@ -31,7 +31,7 @@
 
         <div id="control">
             <div id="control__back">
-                <a href="home.html"> <i class="fas fa-angle-left"></i></a>
+                <a href="home-Or.html"> <i class="fas fa-angle-left"></i></a>
             </div>
             <div id="control__filter">
                 <i class="fas fa-sliders-h"></i>
