--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/info.html
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/info.html
@@ -17,7 +17,7 @@
             <div id="control__nav">
                 <nav>
                     <ul>
-                        <li><a href="home.html"><i class="material-icons white-color">home</i></a></li>
+                        <li><a href="home-Or.html"><i class="material-icons white-color">home</i></a></li>
                         <li><a href="info.html"><i class="material-icons white-color">email</i></a></li>
                         <li><a href="noa1.html"><i class="material-icons white-color">pie_chart</i></a></li>
                         <li id="monthly-tasks"><a href="monthly-tasks.html"><i
