--- a/01-HTML-CSS/09-animations/Andrew/Andrew and Ohad/Wallet.html
+++ b/01-HTML-CSS/09-animations/Andrew/Andrew and Ohad/Wallet.html
@@ -746,7 +746,7 @@
 
     <div class="footer">
         <div class="footer-container">
-            <div class="footer-container__market">
+            <div class="footer-container__market" onclick="window.location='Market.html';">
 
                 <svg viewBox="37.67 100.39 19.76 19.77">
                     <path d="M53.43,100.39H41.67c-2.2,0-4,1.8-4,4v11.77c0,2.2,1.8,4,4,4h11.76c2.2,0,4-1.8,4-4v-11.77
